--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </header>
 <div id="popup" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); color: white; display: flex; justify-content: center; align-items: center; z-index: 1000;">
     <div style="background-color: #1f1f1f; padding: 20px; border-radius: 5px; text-align: center; max-width: 500px;">
-        <p>This is a website designed for you to read others experiances and for you to share your own. Express yourself without your identity being visible on this website. Rant or post one word sentences about anything you want (Dark stories included) after all I's Okay To Decay  Made by yours truly</p>
+        <p>This is a website designed for you to read others experiences and for you to share your own. Express yourself without your identity being visible on this website. Rant or post one word sentences about anything you want (Dark stories included) after all I's Okay To Decay  Made by yours truly</p>
         <button onclick="closePopup()" style="padding: 10px 20px; border: none; background-color: #ff4c4c; color: white; border-radius: 5px; cursor: pointer;">Continue</button>
     </div>
 </div>
