--- a/index.html
+++ b/index.html
@@ -222,3 +222,68 @@
         }
     }
 </script>
+<script>
+    function submitPost() {
+        const postContent = document.getElementById('postContent').value;
+        if (postContent.trim() === '') {
+            alert('Post content cannot be empty');
+            return;
+        }
+
+        const post = {
+            content: postContent,
+            timestamp: new Date().toLocaleString(),
+            likes: 0
+        };
+
+        const posts = JSON.parse(localStorage.getItem('posts')) || [];
+        posts.push(post);
+        localStorage.setItem('posts', JSON.stringify(posts));
+
+        addPostToDOM(post, posts.length - 1);
+        document.getElementById('postContent').value = '';
+    }
+
+    function loadPosts() {
+        const posts = JSON.parse(localStorage.getItem('posts')) || [];
+        posts.forEach((post, index) => {
+            addPostToDOM(post, index);
+        });
+    }
+
+    function addPostToDOM(post, index) {
+        const postsContainer = document.getElementById('postsContainer');
+        const postElement = document.createElement('div');
+        postElement.className = 'post';
+        postElement.innerHTML = `
+            <p>${post.content}</p>
+            <small>${post.timestamp}</small>
+            <div>
+                <button onclick="likePost(${index})" style="padding: 5px 10px; border: none; background-color: #ff4c4c; color: white; border-radius: 5px; cursor: pointer;">Like</button>
+                <span id="likeCount${index}">${post.likes}</span> Likes
+                <button onclick="removePost(${index})" style="padding: 5px 10px; border: none; background-color: #ff4c4c; color: white; border-radius: 5px; cursor: pointer;">Remove</button>
+            </div>
+        `;
+        postsContainer.appendChild(postElement);
+    }
+
+    function likePost(index) {
+        const posts = JSON.parse(localStorage.getItem('posts')) || [];
+        posts[index].likes += 1;
+        localStorage.setItem('posts', JSON.stringify(posts));
+        document.getElementById(`likeCount${index}`).textContent = posts[index].likes;
+    }
+
+    function removePost(index) {
+        const password = prompt('Enter password to remove post:');
+        if (password === 'Mike12345?') {
+            const posts = JSON.parse(localStorage.getItem('posts')) || [];
+            posts.splice(index, 1);
+            localStorage.setItem('posts', JSON.stringify(posts));
+            document.getElementById('postsContainer').innerHTML = '';
+            loadPosts();
+        } else {
+            alert('Incorrect password');
+        }
+    }
+</script>
